<resources>
    <string name="app_name">HealthCare</string>
    <string name="masukan_nama_pengguna">Masukan nama pengguna</string>
    <array name="tipe_pengguna">
        <item>Pengguna Umum</item>
        <item>Admin Wilayah</item>
        <item>Admin Paroki</item>
    </array>

    <array name="pilih_wilayah">
        <item>St. Petrus</item>
        <item>St. Joseph</item>
        <item>Sta. Cecilia</item>
        <item>Pacelli</item>
        <item>St. Blasius</item>
        <item>Sta. Barbara</item>
        <item>Sta. Lucia</item>
        <item>Sta. Faustina</item>
        <item>Sarto</item>
        <item>Sta. Agatha</item>
        <item>St. Yohanes</item>
        <item>Sta. Theresia Lisieux</item>
        <item>St. Paulus</item>
        <item>St. Antonius</item>
        <item>Sta. Theresia Avilla</item>
        <item>Bunda Hati Kudus(BHK)</item>
    </array>

    <array name="umur">
        <item>15-25 tahun</item>
        <item>26-35 tahun</item>
        <item>36-45 tahun</item>
        <item>>46 tahun</item>
    </array>

    <array name="jenis_kelamin">
        <item>Laki - laki</item>
        <item>Perempuan</item>
    </array>

    <array name="tinggi_badan">
        <item>140 cm - 148 cm</item>
        <item>148 cm - 156 cm</item>
        <item>156 cm - 164 cm</item>
        <item>164 cm - 172 cm</item>
        <item>172 cm - 180 cm</item>
    </array>

    <array name="berat_badan">
        <item>35 kg - 47 kg</item>
        <item>48 kg - 60 kg</item>
        <item>61 kg - 73 kg</item>
        <item>74 kg - 86 kg</item>
        <item>87 kg - 99 kg</item>
    </array>

    <array name="yes_or_no">
        <item>Ya</item>
        <item>Tidak</item>
    </array>

    <array name="paham">
        <item>Tidak Paham</item>
        <item>Cukup Paham</item>
        <item>Sangat Paham</item>
    </array>

    <array name="nyeri">
        <item>Tidak</item>
        <item>Cukup</item>
        <item>Sering</item>
    </array>

    <array name="mual">
        <item>Tidak</item>
        <item>Cukup</item>
        <item>Sering</item>
    </array>

    <array name="sesak">
        <item>Tidak</item>
        <item>Cukup</item>
        <item>Sering</item>
    </array>


    <string name="title_activity_general_user">GeneralUserActivity</string>
    <string name="title_home">Kuesioner PJK</string>
    <string name="title_dashboard">Statistik Wilayah dan Paroki</string>
    <string name="title_notifications">Riwayat Deteksi</string>
    <string name="hint_field">Field tidak boleh kosong</string>
    <string name="hint_pilih_wilayah">Pilih Wilayah</string>
    <string name="hint_pilih_jenis_kelamin">Pilih Jenis Kelamin</string>
    <string name="hint_pilih_tinggi_badan">Pilih Tinggi Badan</string>
    <string name="hint_berat_badan">Pilih Berat Badan</string>
    <string name="hint_paham">Seberapa paham anda terkait PJK?</string>
    <string name="hint_checkup_jantung">Pernah checkup jantung?</string>
    <string name="hint_nyeri_dada">Nyeri dada sebelah kiri?</string>
    <string name="hint_mual">Merasa mual saat aktivitas?</string>
    <string name="hint_sesak_napas">Mengalami sesak napas saat aktivitas?</string>
    <string name="hint_nyeri_ulu_hati">Nyeri ulu hati saat aktivitas?</string>
    <string name="hint_riwayat_hipertensi">Memiliki riwayat hipertensi?</string>
    <string name="hint_obesitas">Memiliki berat badan berlebih?</string>
    <string name="hint_diabetes">Memiliki riwayat diabetes?</string>
    <string name="hint_pjk">Memiliki riwayat Penyakit Jantung Koroner?</string>
    <string name="hint_nama_layout">Masukan Nama Pengguna</string>
    <string name="hint_username">Masukan Username</string>
    <string name="hint_email">Masukan Email</string>
    <string name="hint_tipe_pengguna">Pilih Tipe Pengguna</string>
    <string name="hint_password">Masukan Password</string>
    <string name="hint_konfirmasi_password">Konfirmasi Password</string>
    <string name="daftar">Daftar</string>
    <string name="data_diri_umat_dan_pertanyaan_pjk">Data Diri Umat dan Pertanyaan PJK</string>
    <string name="submit">Kirim\n</string>
    <string name="hint_usia">Masukan Usia</string>
    <string name="numbering">No</string>
    <string name="questions">Pertanyaan</string>
    <string name="answers">Jawaban</string>
    <string name="_1">1</string>
    <string name="ten">10</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="cluster_result">Hasil cluster merupakan %s</string>
    <string name="hasil_deteksi_toolbar_title">Hasil Deteksi PJK</string>

</resources>